Fixed contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1720,7 +1720,7 @@ font-size: 7pt;
   content: " ";
 }
 
-.contact_address { display: block; white-space: nowrap; width: 74%; overflow: hidden; text-overflow: ellipsis; font-size: 11px; margin-top: -35px; font-weight: 400; margin-left: 5px; font-family: "Roboto";}
+.contact_address { display: block; white-space: nowrap; width: 74%; overflow: hidden; text-overflow: ellipsis; font-size: 11px; margin-top: -35px; font-weight: 400; margin-left: 5px; font-family: "Roboto"; color: rgba(255,255,255,0.8);}
 .contact_avatar { border-radius: 50%; position: relative; left: -43px; top: 2px; }
 .listed_message { display: block; width: 90%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 11px; opacity: 0.7; margin-top: -10px; margin-left: 5px; }
 
